add: Layout components 개발

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
   font-family: "Pretendard";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
 }
 
 code {
