--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,29 @@
 @font-face {
   font-family: "Pretendard";
   font-display: fallback;
+  font-weight: 100;
+  src: url("./style/fonts/Pretendard-Thin.otf") format("opentype");
+}
 
+@font-face {
+  font-family: "Pretendard";
+  font-display: fallback;
+  font-weight: 300;
+  src: url("./style/fonts/Pretendard-Light.otf") format("opentype");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-display: fallback;
+  font-weight: 400;
   src: url("./style/fonts/Pretendard-Medium.otf") format("opentype");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-display: fallback;
+  font-weight: 600;
+  src: url("./style/fonts/Pretendard-Bold.otf") format("opentype");
 }
 
 body {
